--- a/test/fixtures/grupos.yml
+++ b/test/fixtures/grupos.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+empresa:
+  id: 1
+  nome: 'Caltech'
+  usuario_id: 1
+
+amigos:
+  id: 2
+  nome: 'Turma da pesada'
+  usuario_id: 2
